--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         
         <nav>
             <a href="/" class="nav">Web</a>
-            <a href="/grafik" class="nav">Grafik</a>
+            <a href="/grafik" class="nav active">Grafik</a>
             <a href="/produkt" class="nav">Produkt</a>
-            <a href="/archiv" class="nav active">Archiv</a>
+            <a href="/archiv" class="nav">Archiv</a>
         </nav>
         </div>
 
