--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="modde.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Instrument+Serif:ital@0;1&family=Trocchi&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=web_traffic" />
 </head>
@@ -33,10 +33,6 @@
         </nav>
         </div>
 
-<!-- <div id="anim-container">
-    <div id="board"></div>
-    <div id="explanationText">01010101 01101110 01100101 01101100 01101100 01100001 01101101 =<br>Binary for Tuttofare (ital. Jack of all Trades)</div>
-</div> -->
  
  <div class="main-container">
   
@@ -429,6 +425,6 @@
 </div>
 
 
-    <script src="swag.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
