--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 -->  
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,7 +51,7 @@
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier5.jpeg" alt="Image 3">
-         <span class="material-symbols-outlined icon">web_traffic</span>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
     </div>
 
@@ -59,7 +59,7 @@
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier4.jpeg" alt="Image 3">
-         <span class="material-symbols-outlined icon">web_traffic</span>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
     </div>
 
@@ -67,7 +67,7 @@
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier6.jpeg" alt="Image 3">
-         <span class="material-symbols-outlined icon">web_traffic</span>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
     </div>
 
@@ -75,7 +75,7 @@
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier7.jpg" alt="Image 3">
-         <span class="material-symbols-outlined icon">web_traffic</span>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
     </div>
 
@@ -83,21 +83,21 @@
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier9.JPG" alt="Image 3">
-         <span class="material-symbols-outlined icon">web_traffic</span>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
     </div>
         <div class="scroll-box">
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier10.JPG" alt="Image 3">
-         <span class="material-symbols-outlined icon">web_traffic</span>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
     </div>
     <div class="scroll-box">
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier1-copyright-moritzgauss.jpeg" alt="Image 2">
-         <span class="material-symbols-outlined icon">web_traffic</span>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
     </div>
 </div>
@@ -124,57 +124,57 @@
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd1-copyright-moritzgauss.JPG" alt="Creative Direction Image 1">
-             <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd3-copyright-moritzgauss.JPG" alt="Creative Direction Image 3">
-             <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd4-copyright-moritzgauss.JPG" alt="Creative Direction Image 4">
-             <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd5-copyright-moritzgauss.jpg" alt="Creative Direction Image 5">
-             <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd6-copyright-moritzgauss.jpg" alt="Creative Direction Image 6">
-             <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd9-copyright-moritzgauss.JPG" alt="Creative Direction Image 9">
-             <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd10-copyright-moritzgauss.jpg" alt="Creative Direction Image 10">
-             <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd11-copyright-moritzgauss.JPG" alt="Creative Direction Image 11">
-             <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
           </div>
     </div>
 
@@ -201,50 +201,50 @@
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork1-copyright-moritzgauss.jpg" alt="Artworks Image 1">
-                <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork2-copyright-moritzgauss.jpeg" alt="Artworks Image 2">
-                <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork3-copyright-moritzgauss.jpeg" alt="Artworks Image 3">
-                 <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork4-copyright-moritzgauss.jpeg" alt="Artworks Image 4">
-                <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork5-copyright-moritzgauss.jpeg" alt="Artworks Image 5">
-                <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork6-copyright-moritzgauss.jpeg" alt="Artworks Image 6">
-                <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork7-copyright-moritzgauss.jpg" alt="Artworks Image 7">
-                <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
     </div>
 
@@ -270,7 +270,7 @@
         </div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo1-copyright-moritzgauss.jpg" alt="Typography Image 1">
-         <span class="material-symbols-outlined icon">web_traffic</span>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
     </div>
     
@@ -278,7 +278,7 @@
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo2-copyright-moritzgauss.PNG" alt="Typography Image 2">
-         <span class="material-symbols-outlined icon">web_traffic</span>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
     </div>
 
@@ -286,7 +286,7 @@
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo3-copyright-moritzgauss.jpeg" alt="Typography Image 3">
-         <span class="material-symbols-outlined icon">web_traffic</span>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
     </div>
 
@@ -294,7 +294,7 @@
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo4-copyright-moritzgauss.png" alt="Typography Image 4">
-         <span class="material-symbols-outlined icon">web_traffic</span>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
     </div>
 
@@ -302,7 +302,7 @@
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo5-copyright-moritzgauss.jpg" alt="Typography Image 5">
-         <span class="material-symbols-outlined icon">web_traffic</span>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
     </div>
 
@@ -310,7 +310,7 @@
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo6-copyright-moritzgauss.png" alt="Typography Image 6">
-         <span class="material-symbols-outlined icon">web_traffic</span>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
     </div>
 
@@ -318,7 +318,7 @@
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo7-copyright-moritzgauss.png" alt="Typography Image 7">
-         <span class="material-symbols-outlined icon">web_traffic</span>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
     </div>
 </div>
@@ -341,21 +341,21 @@
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/print1-copyright-moritzgauss.jpg" alt="Printworks Image 1">
-             <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/print3-copyright-moritzgauss.jpg" alt="Printworks Image 3">
-             <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo2-copyright-moritzgauss.jpeg" alt="Printworks Image 4">
-             <span class="material-symbols-outlined icon">web_traffic</span>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
         </div>
     </div>
@@ -377,36 +377,36 @@
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo1-copyright-moritzgauss.jpg" alt="Photography Image 1">
-             <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo3-copyright-moritzgauss.jpg" alt="Photography Image 3">
-             <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo4-copyright-moritzgauss.jpg" alt="Photography Image 4">
-             <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo5-copyright-moritzgauss.jpg" alt="Photography Image 5">
-             <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo6-copyright-moritzgauss.jpg" alt="Photography Image 6">
-             <span class="material-symbols-outlined icon">web_traffic</span>
-            </div>
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
         </div>
     </div>
 
