--- a/index.html
+++ b/index.html
@@ -37,6 +37,75 @@
  <div class="main-container">
   
   <div class="combined-container">
+    <div class="content" id="calender">
+        <div class="scroll-box">
+            <div class="info">
+                <h2>Calendar Workshop HfG Of (2025)</h2>
+                <p>Calender Workshop with <a href="https://www.instagram.com/kd_hfg_of-im-m26/">HfG Offenbach Kommunikationsdesign</a></p>
+            </div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/IMG_2240.jpeg" alt="Artworks Image 1">
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/IMG_2267.jpeg" alt="Artworks Image 2">
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/IMG_2271.jpeg" alt="Artworks Image 3">
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/IMG_2277.jpeg" alt="Artworks Image 4">
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/IMG_2214.jpeg" alt="Artworks Image 5">
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
+        </div>
+        <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/IMG_2220.jpeg" alt="Artworks Image 7">
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
+          </div>
+                
+                <div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/IMG_2232.jpeg" alt="Artworks Image 7">
+         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
+        </div>
+        </div>
+    </div>
+
+    <div class="arrows-wrapper">
+        <div class="arrows">
+            <span class="arrow arrow_left">←</span>
+            <span class="arrow arrow_right">→</span>
+        </div>
+    </div>
+   <div class="discr-container">
+   <p>svg visuals created by coding with chat gpt in processing, numbers set by hand.
+Workshop with                 <p><a href="https://www.instagram.com/adelinemollard">Adeline Mollard</a>, HfG Offenbach, January 2025</p>
+  </div>
+</div>
+
+  <div class="combined-container">
    <div class="content" id="atelier">
     <div class="scroll-box">
         <div class="info">
@@ -121,6 +190,7 @@
             <div class="info">
                 <h2>Creative Direction (2024)</h2>
                 <p>illRise2Shine Corporate Identity and Fashion Concepts</p>
+                <p><a href="https://r2shine.de">www.r2shin.de</a></p>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd1-copyright-moritzgauss.JPG" alt="Creative Direction Image 1">
@@ -197,7 +267,7 @@
         <div class="scroll-box">
             <div class="info">
                 <h2>Painting (2023)</h2>
-                <p>monobloccc (2023), bone&clyde (2023)</p>
+                <p>made in China (2024), monobloccc (2023)</p>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork1-copyright-moritzgauss.jpg" alt="Artworks Image 1">
@@ -207,7 +277,7 @@
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork2-copyright-moritzgauss.jpeg" alt="Artworks Image 2">
+                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/IMG_1928.jpeg" alt="Artworks Image 2">
          <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
         </div>
@@ -228,21 +298,14 @@
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork5-copyright-moritzgauss.jpeg" alt="Artworks Image 5">
+                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/IMG_1938.jpeg" alt="Artworks Image 5">
          <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork6-copyright-moritzgauss.jpeg" alt="Artworks Image 6">
-         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
-        </div>
-        </div>
-        <div class="scroll-box">
-            <div class="info"></div>
-            <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork7-copyright-moritzgauss.jpg" alt="Artworks Image 7">
+                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/IMG_1945.jpeg" alt="Artworks Image 7">
          <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
         </div>
         </div>
