--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
    <div class="discr-container">
    <p>svg visuals created by coding with chat gpt in processing, numbers set by hand.
-Workshop with                 <p><a href="https://www.instagram.com/adelinemollard">Adeline Mollard</a>, HfG Offenbach, January 2025</p>
+Workshop with <a href="https://www.instagram.com/adelinemollard">Adeline Mollard</a>, HfG Offenbach, January 2025</p>
   </div>
 </div>
 
