--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
     </div>
    <div class="discr-container">
-   <p>svg visuals created by coding with chat gpt in processing, numbers set by hand.
+   <p>Visuals created by coding with in processing with JavaScrip. Printed with Riso.
 Workshop with <a href="https://www.instagram.com/adelinemollard">Adeline Mollard</a>, HfG Offenbach, January 2025</p>
   </div>
 </div>
@@ -267,7 +267,7 @@ Workshop with <a href="https://www.instagram.com/adelinemollard">Adeline Mollard
         <div class="scroll-box">
             <div class="info">
                 <h2>Painting (2023)</h2>
-                <p>made in China (2024), monobloccc (2023)</p>
+                <p>made in China (2024), monoblocc (2023)</p>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork1-copyright-moritzgauss.jpg" alt="Artworks Image 1">
@@ -318,7 +318,7 @@ Workshop with <a href="https://www.instagram.com/adelinemollard">Adeline Mollard
         </div>
     </div>
    <div class="discr-container">
-   <p>Bone and cement with acrylic paint on canvas<br>thick acrylic paint on canvas</p>
+   <p>Sometimes i paint.</p>
   </div>
 </div>
 
