--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         
         <nav>
             <a href="/" class="nav">Web</a>
-            <a href="/grafik" class="nav active">Creative</a>
-            <a href="/produkt" class="nav">Objects</a>
-            <a href="/archiv" class="nav">Concepts</a>
+            <a href="/creative" class="nav active">Creative</a>
+            <a href="/objects" class="nav">Objects</a>
+            <a href="/concepts" class="nav">Concepts</a>
         </nav>
         </div>
 
