--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
  <div class="main-container">
   
   <div class="combined-container">
-    <div class="content" id="calender">
+    <div class="content" id="calendar">
         <div class="scroll-box">
             <div class="info">
                 <h2>Calendar Workshop HfG Of (2025)</h2>
-                <p>Calender Workshop with <a href="https://www.instagram.com/kd_hfg_of-im-m26/">HfG Offenbach Kommunikationsdesign</a></p>
+                <p>Calendar Workshop with <a href="https://www.instagram.com/kd_hfg_of-im-m26/">HfG Offenbach Kommunikationsdesign</a></p>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/IMG_2240.jpeg" alt="Artworks Image 1">
