--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ Workshop with <a href="https://www.instagram.com/adelinemollard">Adeline Mollard
         </div>
     </div>
    <div class="discr-container">
-            <p>Rise 2 Shine reimagines how we approach apparel by challenging the need for new creations and focusing on unlocking the potential in existing materials.
+            <p>Rise 2 Shine reimagines how we approach apparel by challenging the need for new creations and portraying Daily observations.
              Rise 2 Shine® represents a new narrative for fashion, where fun and value come from rethinking and transforming the familiar.
             </p>
         </div>
