index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
     </div>
    <div class="discr-container">
-   <p>Visuals created by coding with in processing with JavaScrip. Printed with Riso.
+   <p>Visuals created by coding in processing. Printed with Riso.
 Workshop with <a href="https://www.instagram.com/adelinemollard">Adeline Mollard</a>, HfG Offenbach, January 2025</p>
   </div>
 </div>
