index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@ Workshop with <a href="https://www.instagram.com/adelinemollard">Adeline Mollard
         <div class="scroll-box">
             <div class="info">
                 <h2>Creative Direction (2024)</h2>
-                <p>illRise2Shine Corporate Identity and Fashion Concepts</p>
-                <p><a href="https://r2shine.de">www.r2shin.de</a></p>
+                <p>Rise 2 Shine Corporate Identity and Fashion Concepts</p>
+            <p><a href="https://r2s.education" target="_blank">www.r2s.education</a></p>
+            <p><a href="https://instagram.com/r2s.education" target="_blank">instagram.com/r2s.education</a></p>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd1-copyright-moritzgauss.JPG" alt="Creative Direction Image 1">
@@ -161,7 +162,7 @@ Workshop with <a href="https://www.instagram.com/adelinemollard">Adeline Mollard
     </div>
    <div class="discr-container">
             <p>Rise 2 Shine reimagines how we approach apparel by challenging the need for new creations and portraying Daily observations.
-             Rise 2 Shine® represents a new narrative for fashion, where fun and value come from rethinking and transforming the familiar.
+             Rise 2 Shine represents a new narrative for fashion, where fun and value come from rethinking and transforming the familiar.
             </p>
         </div>
     </div>
