--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@ Workshop with <a href="https://www.instagram.com/adelinemollard">Adeline Mollard
         <div class="info">
             <h2>Typography</h2>
             <p>Font Families: Gull Edge and Tukan Sans</p>
-            <a href="https://drive.google.com/drive/folders/1U2_Ybbpf-9-2r35jf8VSxBvZGMz3gh_v?usp=sharing">Download Tukan Sans</a><br>
-            <a href="https://drive.google.com/drive/folders/1r7RaDSKOWb6uzabs4UIma_JYrOsKwCqy?usp=drive_link">Download Gull Edge</a>
+            <a href="https://drive.google.com/drive/folders/1kGwXCQPj_DQsUI-Na3d5cfS13PSi0jVg">Download Tukan Sans</a><br>
+            <a href="https://drive.google.com/drive/folders/1DXTaNhtj9j7IhqWJjcRj6dLLlrjN2p8x">Download Gull Edge</a>
         </div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo1-copyright-moritzgauss.jpg" alt="Typography Image 1">
