--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moritz Gauss - Creative Projects</title>
+    <title>Moritz Gauss - Creative Direction Projects</title>
     <meta name="description" content="digital artist and designer - my personal portfolio site">
     <meta name="keywords" content="digital design, webdesign, digital artist, Moritz Gauss, creative coding, designer berlin, design, frontend development, developer">
     <link rel="icon" type="image/png" href="favicon.png">
@@ -25,8 +25,8 @@
 
     <div class="header-container">
         <div class="logo">
-         <a class="moritz" href="/about">Mritz Gauss</a>
-            <a href="/studio/">(Studio)</a>
+         <a class="moritz" href="/about">Moritz Gauss</a>
+            <a href="/studio/">Studio</a>
         </div>
         
         <nav>
