index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -23,20 +23,21 @@
 </head>
 <body>
 
-    <div class="header-container">
-        <div class="logo">
-         <a class="moritz" href="/about">Moritz Gauss</a>
-            <a href="/studio/">Studio</a>
-        </div>
-        
-        <nav>
-            <a href="/" class="nav">Web</a>
-            <a href="/creative" class="nav active">Creative</a>
-            <a href="/objects" class="nav">Objects</a>
-            <a href="/concepts" class="nav">Concepts</a>
-        </nav>
-        </div>
+<header class="header-container">
+    <div class="logo">
+        <a class="moritz" href="/about">Moritz Gauss</a>
+        <a href="/studio/">Studio</a>
+    </div>
 
+    <h1 class="subtitle">digital artist and designer</h1>
+
+    <nav>
+        <a href="/" class="nav">Web</a>
+        <a href="/creative" class="nav active">Creative</a>
+        <a href="/objects" class="nav">Objects</a>
+        <a href="/concepts" class="nav">Concepts</a>
+    </nav>
+</header>
  
  <div class="main-container">
   
