index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 
-<header id="header-placeholder"></header>
+<header class="header-container" id="header-placeholder"></header>
 
  
  <div class="main-container">
