--- a/index.html
+++ b/index.html
@@ -33,9 +33,22 @@
   <link rel="stylesheet" href="/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
 </head>
-<body>
 
-<header class="header-container" id="header-placeholder"></header>
+<header class="header-container">
+    <div class="logo">
+        <a class="moritz" href="/about">Moritz Gauss</a>
+        <a href="/studio/">Studio</a>
+    </div>
+
+    <h1 class="subtitle">digital artist and designer</h1>
+
+    <nav>
+        <a href="/" class="nav">Web</a>
+        <a href="/creative" class="nav active">Creative</a>
+        <a href="/objects" class="nav">Objects</a>
+        <a href="/concepts" class="nav">Concepts</a>
+    </nav>
+</header>
 
  
  <div class="main-container">
