--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
     <title>Moritz Gauss - Creative Direction</title>
     <meta name="description" content="digital artist and designer - my personal portfolio site">
     <meta name="keywords" content="digital design, webdesign, digital artist, Moritz Gauss, creative coding, designer berlin, design, frontend development, developer">
-    <link rel="icon" type="image/png" href="/material/favicon.png">
+     <link id="favicon" rel="icon" type="image/png" href="/material/favicon1.png">
     <link rel="shortcut icon" type="image/png" href="/material/favicon.png">
     <link rel="apple-touch-icon" href="/material/banner.png">  
     <link rel="stylesheet" href="/assets/global.css">
-    <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&family=Poiret+One&family=Trocchi&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> 
 </head>
 <body>
  
@@ -335,8 +338,9 @@
             </div>
             
             
-                    <div class="scroll-box">
+
         <div class="content">
+              <div class="scroll-box">
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo1-copyright-moritzgauss.jpg" alt="Photography Image 1">
         </div>
@@ -379,5 +383,6 @@
 
 
     <script src="/assets/global.js"></script>
+     <script src="/material/favicon.js"></script>
 </body>
 </html>
