index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <div class="info">
                 <h2>Calendar Workshop HfG Of (2025)</h2>
-                <p>Calendar Workshop with <a href="https://www.instagram.com/kd_hfg_of-im-m26/">HfG Offenbach Kommunikationsdesign</a></p>
+                <p>Calendar Workshop with <a href="https://www.instagram.com/kd_hfg_of/">HfG Offenbach Kommunikationsdesign</a></p>
             </div>
             
     <div class="content" >
